[package]
name = "poke-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "poke-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.9"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = "0.12"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"

[dev-dependencies]
httpmock = "0.7"
